deploy/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pravega-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pravega-operator
  template:
    metadata:
      labels:
        name: pravega-operator
        component: pravega-operator
    spec:
      serviceAccountName: pravega-operator
      containers:
        - name: pravega-operator
          image: pravega/pravega-operator:latest
          ports:
          - containerPort: 60000
            name: metrics
          command:
          - pravega-operator
          imagePullPolicy: Always
          volumeMounts:
            - name: versions-volume
              mountPath: "/tmp/config"
      volumes:
        - name: versions-volume
          configMap:
            name: supported-versions-map
