deploy/admissions.yaml
# Pravega Operator Service for WebHook
kind: Service
apiVersion: v1
metadata:
  name: pravega-operator
spec:
  selector:
    name: pravega-operator
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8443
---
# Pravega Operator Validating Webhook
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: pravega-operator-webhook
webhooks:
- name: pravega-cluster.pravega.io
  rules:
  - apiGroups:
    - "pravega.pravega.io"
    apiVersions:
    - "v1alpha1"
    operations:
    - "CREATE"
    resources:
    - "pravegaclusters"
  clientConfig:
    service:
      namespace: default
      name: pravega-operator
      path: /validate-pravega-cluster
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVMVENDQXhXZ0F3SUJBZ0lKQUphS2NQTkpWQzNBTUEwR0NTcUdTSWIzRFFFQkJRVUFNR3d4Q3pBSkJnTlYKQkFZVEFrRlZNUk13RVFZRFZRUUlFd3BUYjIxbExWTjBZWFJsTVNFd0h3WURWUVFLRXhoSmJuUmxjbTVsZENCWAphV1JuYVhSeklGQjBlU0JNZEdReEpUQWpCZ05WQkFNVEhIQnlZWFpsWjJFdGIzQmxjbUYwYjNJdVpHVm1ZWFZzCmRDNXpkbU13SGhjTk1UZ3dOekUzTURrME1ERXhXaGNOTVRrd056RTNNRGswTURFeFdqQnNNUXN3Q1FZRFZRUUcKRXdKQlZURVRNQkVHQTFVRUNCTUtVMjl0WlMxVGRHRjBaVEVoTUI4R0ExVUVDaE1ZU1c1MFpYSnVaWFFnVjJsawpaMmwwY3lCUWRIa2 [...]
